*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9468 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -81,7 +81,7 @@ module.ForumYouthIcons.tournament.desc=Der føjes et ikon for TournamentID
 module.ForumYouthIcons.tournament_match.desc=Der føjes et ikon for TournamentKampID
 #FormatPostingText
 module.FormatPostingText.desc=Erstatter FoxTrick HT-ML-tags med HTML-tags (dvs. 'præ' element)
-module.FormatPostingText.NestedQuotesAsSpoilers.desc=Viser indskudte citater i en spoiler. Angive niveauet nedenfor.
+module.FormatPostingText.NestedQuotesAsSpoilers.desc=Viser indlejrede citater i en spoiler. Angive niveauet nedenfor.
 #EmbedMedia
 module.EmbedMedia.desc=Registrerer links til mediefiler og integrerer dem ind på webstedet. (Eksperimentel)
 module.EmbedMedia.EmbedYoutubeVideos.desc=Integrer YouTube-videoer
@@ -525,7 +525,7 @@ MedianTransferPrice.average=Gennemsnits pris
 AddLeaveConfButton.LeaveForum=Forlad forum
 AddLeaveConfButton.alert=Klik på knappen 'gem' på den næste side for at forlade denne konference.
 ShowForumPrefButton.forumPreferences=Forum indstillinger
-FormatPostingText.ShowNestedQuotes=Vis indskudte citater
+FormatPostingText.ShowNestedQuotes=Vis indlejrede citater
 HideSignatures.signaturetoggle=Signatur
 MarkUnread.markunread=Markere som ulæst herfra
 EmbedMedia.EmbeddedImage=Integreret billede
