--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -1042,7 +1042,7 @@ team.status.booked=קבעת משחק ידידות
 datetimestrings.days=יום; ימים
 datetimestrings.hours=שעה; שעות
 datetimestrings.minutes=דקה; דקות
-datetimestrings.short_seasons=שנ';שנ'
+datetimestrings.short_seasons=עו';עו'
 datetimestrings.short_weeks=שב';שב'
 datetimestrings.short_days=י';י'
 
