--- a/content/locale/sl/foxtrick.properties
+++ b/content/locale/sl/foxtrick.properties
@@ -61,6 +61,7 @@ module.EmbedMedia.EmbedDailymotionVideos.desc=Vgnezdi Dailymotion videe
 module.EmbedMedia.EmbedSoundCloud.desc=Vgnezdi Soundcloud
 module.EmbedMedia.EmbedFlickrImages.desc=Vgnezdi slike s Flickra
 module.EmbedMedia.EmbedDeviantArtImages.desc=Vgnezdi slike z Deviantarta
+module.EmbedMedia.EmbedImageshack.desc=Razširjena podpora za ImageShack (samo Firefox in Chrome)
 #Forum direct page links
 #
 module.LinksFans.desc=Doda nekaj zunanjih povezav na stran z navijači
@@ -132,6 +133,7 @@ module.TeamPopupLinks.LastLineup.desc=Zadnja postavitev
 module.TeamPopupLinks.NextMatch.desc=Naslednja tekma
 module.TeamPopupLinks.AddNextMatch.desc=Doda naslednjo tekmo v HT Live
 module.TeamPopupLinks.YouthMatches.desc=Mladinske tekme
+module.TeamPopupLinks.Tournaments.desc=Turnirji
 module.TeamPopupLinks.Coach.desc=Trener
 module.SkillColoring.desc=Boljša predstavljivost sposobnosti
 module.SkillColoring.skill_color.desc=Obarva sposobnosti
@@ -177,6 +179,7 @@ module.RatingsDisplay.HatStats.desc=Kot HatStati
 #Youth-Twins
 
 #PlayerStatsExperience
+PlayerStatsExperience.ExperienceText=Zbral je že med %1 in %2 točk, izmed 28 točk izkušenj. Njegove izkušnje so med %3 in %4.
 
 #Series statistics
 
@@ -347,6 +350,7 @@ matchOrder.AddMatchManually=Dodaj tekmo ročno
 matchOrder.swapPositions=Menjava položajev
 matchOrder.options=Možnosti
 matchOrder.summary=Povzetek
+matchOrder.tournamentMatch=Turnir
 
 #Skills
 Playmaking=Grajenja igre
@@ -451,6 +455,8 @@ Speciality.abbr=Pos
 Last_match=Zadnja tekma
 Last_match.abbr=Zadnja
 Last_stars=Najnovejše zvezdice
+Last_stars_EndOfGame=Zadnje rumene zvezdice
+Last_stars_decline=Zadnje rjave zvezdice
 Last_position=Zadnji položaj
 Last_position.abbr=Pos
 #following string uses pluralForms
@@ -541,7 +547,10 @@ copy.ht-ml=Kopiraj v HT-ML
 copy.table=Kopiraj tabelo v HT-ML
 
 #copy
+copy.playerad=Kopiraj igralčev oglas
+copy.playerad.copied=Igralčev oglas je bil kopiran v odložišče.
 copy.matchid=Kliknite, če želite kopirati matchID v odložišče
+copy.matchid.copied=ID tekme je bil kopiran v odložišče.
 copy.posting.style.ht-ml=HT-ML
 copy.posting.style.wiki=wiki
 copy.posting.style.last=zadnje
@@ -609,6 +618,7 @@ NextMatch=Naslednja tekma
 AddNextMatch=Dodaj naslednjo tekmo v HT Live
 LastLineup=Zadnja postavitev
 YouthMatches=Mladinske tekme
+Tournaments=Turnirji
 more=več ...
 less=manj ...
 
@@ -765,6 +775,7 @@ TeamPopupLinks.OpenNewTab=Odpri v novem zavihku
 
 #toolbar
 toolbar.title=FoxTrick
+toolbar.preferences=Nastavitve
 status.active=aktivno
 status.enabled=omogočeno, ampak ni aktivno na %s
 status.disabled=onemogočeno
