*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9473 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -73,12 +73,12 @@ module.ForumYouthIcons.youth_match.desc=Tilføjer ikon for UngdomskampID
 module.ForumYouthIcons.youth_series.desc=Tilføjer ikon for UngdomsserieID
 module.ForumYouthIcons.enlarge_input.desc=Forstørrer tekstfeltet for bedre skrivning
 module.ForumYouthIcons.pre.desc=Tilføjer ikon for Forum 'præ' format
-module.ForumYouthIcons.table.desc=Der føjes et ikon for tabel. Brugerdefineret mærkater accepterer regulære udtryk (skjul med yderligere, f.eks.)
-module.ForumYouthIcons.symbols.desc=Der føjes et ikon til symboler nedenfor. Posteringer er adskilt af semikoloner. For at bruge et semikolon Angiv "/;".
+module.ForumYouthIcons.table.desc=Tilføjer ikon for tabel. Brugerdefineret mærkater accepterer regulære udtryk (f.eks. skjule yderligere.)
+module.ForumYouthIcons.symbols.desc=Tilføjer ikon til symboler nedenfor. Posteringer er adskilt af semikoloner. For at bruge et semikolon Angiv "/;".
 module.ForumYouthIcons.debug.desc=Tilføjer ikon for FoxTrick Fejlfinding log
 module.ForumYouthIcons.settings.desc=Tilføjer ikon for FoxTrick indstillinger
-module.ForumYouthIcons.tournament.desc=Der føjes et ikon for TournamentID
-module.ForumYouthIcons.tournament_match.desc=Der føjes et ikon for TournamentKampID
+module.ForumYouthIcons.tournament.desc=Tilføjer ikon for TurneringsID
+module.ForumYouthIcons.tournament_match.desc=Tilføjer ikon for TurneringsKampID
 #FormatPostingText
 module.FormatPostingText.desc=Erstatter FoxTrick HT-ML-tags med HTML-tags (dvs. 'præ' element)
 module.FormatPostingText.NestedQuotesAsSpoilers.desc=Viser indlejrede citater i en spoiler. Angive niveauet nedenfor.
