--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -376,6 +376,7 @@ module.MatchOrderInterface.PlayedLastMatch.desc=Hebt Spieler hervor, die im letz
 module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Betroffene Spieler auch auf dem Spielfeld hervorheben
 module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Bei Turnierspielen nicht anzeigen
 module.MatchOrderInterface.Specialties.desc=Zeige Spezialfähigkeiten
+module.MatchOrderInterface.ShowFaces.desc=Das Trikot durch das Passbild des Spielers ersetzen
 module.MatchOrderInterface.StayOnPage.desc=Nach dem Speichern auf der Aufstellungsseite bleiben
 module.MatchOrderInterface.SwapPositions.desc=Fügt die Möglichkeit die Spielerpositionen zu spiegeln hinzu
 module.MatchSimulator.desc=Fügt einen Spielsimulator der Aufstellungsseite zu
