--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -1039,8 +1039,8 @@ team.status.booked=קבעת משחק ידידות
 #Locales for date and time
 #Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
 #next 6 use pluralFroms
-datetimestrings.days=יום; ימים
-datetimestrings.hours=שעה; שעות
+datetimestrings.days=\ יום; ימים
+datetimestrings.hours=\ שעה; שעות  
 datetimestrings.minutes=דקה; דקות
 datetimestrings.short_seasons=עו';עו'
 datetimestrings.short_weeks=שב';שב'
