--- a/content/locale/no/foxtrick.properties
+++ b/content/locale/no/foxtrick.properties
@@ -22,6 +22,7 @@ module.LineupShortcut.HighlightPlayer.desc=Uthev spiller i lagoppstillingen med 
 module.SmallerPages.desc=Reduserer dimensjonen av noen sider til å tilpasse seg til små skjermer
 module.SmallerPages.ReduceBid.desc=Flytt budet ved siden av ferdighetene og fjern alle tekst slik at bare tallene står igjen (nåværende bud og tid)
 module.ForumTemplates.desc=Tillat omgjøring fra forumpost til mal for senere bruk
+module.ForumTemplates.DefaultShow.desc=Viser eller skjuler malene som standard
 module.ForumPreview.desc=Tillat å vise en forhåndsvisning av en post (Fungerer også for HT-mail)
 module.AddLeaveConfButton.desc=Legg til en "Forlat forum" knapp i hver forummappe
 module.StarsCounter.desc=Legg det totale antallet stjerner til i lagoppstillingssiden
@@ -54,12 +55,27 @@ module.HTDateFormat.LocalSeason.desc=Vis den lokale sesongen istedet for den glo
 module.StaffMarker.desc=Merk de overordnedes nick på forumene. I tekstboksene kan du velge ditt egne tekstformat (HTML tekstformat kjennetegn)  (HTML style attribute).
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Vis en lenkebar for ungdomslaget (Fungerer også fot mail)
+module.ForumYouthIcons.q.desc=Legger til ikon for sitat hvis det mangler
+module.ForumYouthIcons.user_id.desc=Legger til ikon for bruker-ID
+module.ForumYouthIcons.kit_id.desc=Legger til ikon for drakt-ID
+module.ForumYouthIcons.article_id.desc=Legger til ikon for artikkel-ID
+module.ForumYouthIcons.line_br.desc=Legger til ikon for linjeskift
+module.ForumYouthIcons.clock.desc=Legger til ikon for klokkeslett
+module.ForumYouthIcons.spoiler.desc=Legger til ikon for spoiler
+module.ForumYouthIcons.youth_player.desc=Legger til ikon for ungdomsspiller-ID
+module.ForumYouthIcons.youth_team.desc=Legger til ikon for ungdomslag-ID
+module.ForumYouthIcons.youth_match.desc=legger til ikon for ungdomskamp-ID
+module.ForumYouthIcons.youth_series.desc=Legger til ikon for ungdomsliga-ID
+module.ForumYouthIcons.enlarge_input.desc=Større tekstboks for lettere innskriving
 module.ForumYouthIcons.debug.desc=Legg til ikon for FoxTrick debuglogg
 module.ForumYouthIcons.settings.desc=legg til ikon for FoxTrick-innstillinger
 module.ForumYouthIcons.tournament.desc=Legg til ikon for turnerings-ID
+module.ForumYouthIcons.tournament_match.desc=Legg til ikon for turneringskamp-ID
 #FormatPostingText
 module.FormatPostingText.desc=Erstatter FoxTrick HT-ML tags med HTML tags (dvs. 'pre' element)
+module.FormatPostingText.NestedQuotesAsSpoilers.desc=Viser nestede sitater i en spoiler. Velg dybden under.
 #EmbedMedia
+module.EmbedMedia.desc=Oppdag automatisk lenker til mediefiler og legg dem til. (Eksperimentelt)
 module.EmbedMedia.EmbedYoutubeVideos.desc=Sett inn YouTube-video
 module.EmbedMedia.EmbedVimeoVideos.desc=Legg til Vimeo-videoer
 module.EmbedMedia.EmbedImageshack.desc=Utvidet støtte til ImageShack (kun Firefox og Chrome)
@@ -87,6 +103,13 @@ module.LinksAchievements.desc=Legger til noen lenker til prestasjonssiden
 module.LinksStaff.desc=Legger til noen lenker til   ansattsiden
 module.ForumAlterHeaderLine.desc=Forandrer posting header
 # please translate next lines again if needed
+module.ForumAlterHeaderLine.TruncateLeagueName.desc=Vis bare divisjon.
+module.ForumAlterHeaderLine.ReplaceSupporterStar.desc=Erstatter supporterstjerneikonet med tekst (*) for å spare plass
+module.ForumAlterHeaderLine.BookmarkHeaderSmall.desc=Erstatter 'bokmerk innlegget'-ikonet med et mindre ikon
+module.ForumAlterHeaderLine.HighlightThreadOpener.desc=Marker IDen på alle innlegg skrevet av trådstarter
+module.AddDefaultFaceCard.desc=Vis et standardansikt for brukere som ikke har et i foruminnlegg
+module.HTThreadMarker.desc=Marker trådene startet av HTer
+module.TeamStats.General.desc=Generell informasjon (TSI/alder)
 module.TeamStats.Speciality.desc=Spesialitet
 module.TeamStats.Personality.desc=Personlighet
 module.TeamStats.Status.desc=Status (kort/skader)
@@ -99,6 +122,14 @@ module.ExtendedPlayerDetails.SW.desc=Vis kontraktvarighet som sesonger – uker
 module.ExtendedPlayerDetails.SD.desc=Vis kontraktvarighet som sesonger – dager
 module.ExtendedPlayerDetails.WD.desc=Vis kontraktvarighet som uker – dager
 module.ExtendedPlayerDetails.D.desc=Vis kontraktvarighet som dager
+module.ExtendedPlayerDetailsWage.WageWithoutBonus.desc=Vis lønn uten bonus
+module.ExtendedPlayerDetailsWage.SeasonWage.desc=Vis lønn i løpet av en sesong
+module.SimplePresentation.NoLogo.desc=Skjul laglogoer
+module.SimplePresentation.Highlight_Staff_On_All_Pages.desc=Markerer HT-funksjonærer på alle sider
+module.ForumPresentation.desc=Ytterligere visningsvalg for forumet
+module.ForumPresentation.HideFlagsInForumHeader.desc=Fjerner brukerflagg fra topptekst på foruminnlegg
+module.ForumPresentation.HideLeagueInForumHeader.desc=Fjerner brukerserie fra topptekst på foruminnlegg
+module.ForumPresentation.Forum_Spoiler_reveal.desc=Vis alltid innholdet i spoilere
 #ExtraShortcuts
 #CopyMatchID
 module.HeaderFix.desc=Ordner overskriften mens du scroller
@@ -190,6 +221,7 @@ TeamStats.TransferListed=På transferlisten
 TeamStats.Pictures=Ansikter
 TeamStats.PlayedLatest=Spilte forrige kamp
 TeamStats.NotPlayedLatest=Spilte ikke forrige kamp
+TeamStats.ActivePlayers=Aktive spillere
 TeamStats.HomeGrownPlayers=Moderklubbspillere
 TeamStats.PurchasedPlayers=Kjøpte spillere
 TeamStats.FilterFor=Filtrer på
@@ -242,6 +274,7 @@ AddLeaveConfButton.alert=Trykk på 'Large' knappen på neste side for å forlate
 ShowForumPrefButton.forumPreferences=Foruminnstillinger
 MarkUnread.markunread=Marker som ulest herfra
 EmbedMedia.EmbeddedImage=Vedlagt Bilde
+MarkAllAsRead.title=Merk alle tråder i alle forum som lest
 
 # ForumTemplates
 ForumTemplates.make=Lag mal av post
@@ -260,10 +293,13 @@ ForumYouthIcons.youthplayerid=link til juniorspiller
 ForumYouthIcons.youthteamid=link til ungdomslag
 ForumYouthIcons.youthmatchid=legg til link til juniorkamp
 ForumYouthIcons.youthseries=legg til link til ungdomsliga
+ForumYouthIcons.tournamentid=Sett inn link til turnering.
+ForumYouthIcons.tournamentmatchid=Sett inn link til turneringskamp.
 ForumSpecialBBCode.q=Legg til utsagn
 ForumSpecialBBCode.br=legg til linjeskift
 ForumSpecialBBCode.user=legg til brukerid
 ForumSpecialBBCode.article=legg til artikkelid
+ForumSpecialBBCode.clock=Legg til klokkeslett
 ForumSpecialBBCode.spoiler=Legg til spoiler
 ForumSpecialBBCode.pre=Sett inn 'pre' formatteringstag
 ForumSpecialBBCode.tableSeparator=Gjør om "%s" til celler
@@ -311,6 +347,7 @@ match.type.youth.friendly.cup=Ungdomstreningskamp (Cupregler)
 
 matchOrder.noMatchSelected=Ingen kamp valgt
 matchOrder.comparedTo=Sammenlignet med\:
+matchOrder.previousPrediction=Forrige forutsette ratinger
 matchOrder.AddMatchManually=Legg til en kamp manuelt
 matchOrder.swapPositions=Speilvend
 matchOrder.options=Alternativer
@@ -320,12 +357,19 @@ matchOrder.tournamentMatch=Turnering
 
 #Skills
 Playmaking=Ballfordeling
+Playmaking.abbr=BF
 Winger=Ving
+Winger.abbr=VI
 Scoring=Målskåring
+Scoring.abbr=MS
 Passing=Pasninger
+Passing.abbr=PS
 Defending=Forsvar
+Defending.abbr=FO
 Keeper=Målvakt
+Keeper.abbr=MV
 Set_pieces=Dødball
+Set_pieces.abbr=DB
 
 PsicoTSI=PsicoTSI (gjennomsnittlig form)
 PsicoTSI.abbr=Psico
@@ -340,6 +384,13 @@ PlayerCategory.abbr=SK
 categories.GK=MV
 categories.WB=SB
 categories.CD=MS
+categories.W=V
+categories.IM=M
+categories.FW=S
+categories.S=I
+categories.R=R
+categories.E1=E1
+categories.E2=E2
 
 #match positions
 match.pos.kp=Keeper
@@ -517,6 +568,7 @@ copy.skilltable.copied=Ferdighetstabellen har blitt kopiert til utklippstavlen.
 copy.postid=Kopier til utklippstavle
 
 #matches
+matches.income=Inntekt\:
 matches.attackdefensebars=Angrep kontra forsvar barer
 matches.right=Høyre
 matches.left=Venstre
@@ -609,6 +661,8 @@ truthTable.table=HTMS tabell over statistiske sannheten
 truthTable.predicted_position=\#
 truthTable.name=Lag
 truthTable.real_position=Reell pos.
+truthTable.real_points=Faktiske poeng
+truthTable.predicted_points=Forventede poeng
 truthTable.difference=±
 truthTable.tableAtHTMS=Denne tabellen på HTMS hjemmesiden
 
@@ -765,13 +819,22 @@ prefs.setup.country=Land
 
 prefs.storedData.title=Lagrede innstillinger
 # NOTE - please preserve the braces, inner content will be converted to link
+prefs.storedData.disableAll=Deaktiver alle moduler
 
 prefs.disable.title=Deaktiver FoxTrick
 prefs.disable.temporary=Deaktiver midlertidig
+prefs.disable.stage=Deaktiver på Stage-serveren
 
+prefs.loadSave.title=Eksporter eller importer innstillinger
+prefs.loadSave.export=Eksporter innstillinger og/eller brukerinnstillinger
 prefs.loadSave.export.prefs=Innstillinger
+prefs.loadSave.export.notes=Brukerinnstillinger (Maler, egendefinerte lenker og overgangsfiltre)
 
+prefs.additional.translationKeys=Vis oversettelseskoder i stedet for oversettelser
 
+prefs.feedback.saved=Innstillinger lagret\!
+prefs.feedback.loaded=Innstillinger hentet\!
+prefs.feedback.dismiss=(klikk for å fjerne denne meldingen)
 
 link.title=Lenker
 link.homepage=Hjemmeside
@@ -784,6 +847,8 @@ link.nightlyOpera=Utviklingsbygg for Opera
 link.nightlySafari=Utviklingsbygg for Safari
 link.recentChanges=Siste endringer
 
+releaseNotes.show=Vis versjonsinfo etter hver oppdatering
+releaseNotes.showFor=Vis versjonsinfo for\:
 releaseNotes.version=Versjon\:
 
 about.copyright=Opphavsrett
