--- a/content/locale/sv-SE/foxtrick.properties
+++ b/content/locale/sv-SE/foxtrick.properties
@@ -164,6 +164,8 @@ module.TeamStats.General.desc=Generell information (TSI/ålder)
 module.TeamStats.Speciality.desc=Specialitet
 module.TeamStats.Personality.desc=Personlighet
 module.TeamStats.Status.desc=Status (kort/skador)
+module.TeamStats.Attributes.desc=Egenskaper
+module.TeamStats.Skills.desc=Förmågor
 module.TeamStats.Current_league.desc=Nuvarande liga
 module.ExtraPlayerInfo.desc=Visa extra info om spelare på spelaröversikten.
 module.ExtraPlayerInfo.CoachInfo.desc=Lägger till tränartypen (off/def/norm) direkt på tränare på spelaröversikten. Gäller både nuvarande och tidigare tränare.
@@ -373,6 +375,7 @@ module.RatingsDisplay.HatStats.desc=Som HatStats
 #Series statistics
 
 #Save for work
+SafeForWork.icon=Ikon
 
 #Extrashortcuts
 ExtraShortcuts.statistics=Statistik
@@ -402,6 +405,8 @@ YouthPromotes.today=Spelaren kan plockas upp idag\!
 #teamstats+filters
 TeamStats.boxheader=Lagöversikt
 TeamStats.General=Generell
+TeamStats.Attributes=Egenskaper
+TeamStats.Skills=Förmågor
 TeamStats.PlayerNotToOld=Spelare < 19 år
 TeamStats.PlayerToOld=Spelare >\= 19 år
 TeamStats.Cards=Kort
@@ -522,6 +527,7 @@ Filters.ok=Ok
 Filters.clear=Ångra
 Filters.noFilter=Inget filter
 Filters.none=Inga
+Filters.Attributes=Filter egenskaper
 Filters.days=Dagar
 Filters.tsi=TSI
 Filters.stamina=Kondition
