--- a/content/locale/es-CR/foxtrick.properties
+++ b/content/locale/es-CR/foxtrick.properties
@@ -167,6 +167,7 @@ module.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Separar el coloreado de
 module.MatchReportFormat.desc=Presentación del reporte del partido línea por línea, de acuerdo a los eventos del partido.
 module.MatchReportFormat.ShowEventIcons.desc=Agregar iconos específico a un evento.
 module.MatchReportFormat.SeparateOwnTeamColors.desc=Separar el coloreado del equipo propio
+module.LiveMatchReportFormat.desc=Presentación de HT-Live y HT Re-Live línea por línea, de acuerdo al partido con iconos específicos de cada evento.
 module.ForumRedirManagerToTeam.desc=Redirige, el enlace del foro, de la página del mánager a la página del usuario/equipo.
 module.ManagerButtons.desc=Añade o cambia los botones en las páginas del manager y del equipo
 module.ManagerButtons.GuestBook.desc=Añade un enlace para Escribir en el Libro de Visitas dentro de la página del manage y la página del equipo
@@ -1077,7 +1078,7 @@ status.unknown.abbr=?
 oauth.authorize=Autorizar FoxTrick para accesar a los datos de tu equipo
 oauth.instructions=Un enlace a chpp.hattrick.org aparecerá en breve.\nAbré el enlace, ingresa tu nombre de usuario y contraseña para obtener tu código de verificación, copialo en ka oarte inferior para poder autorizar a Foxtrick para accesar a tus datos.\nFoxTrick no sabrá, ni obtendrá tu contraseña durante todo el proceso.
 oauth.why=¿Porqué debería autorizar a FoxTrick?
-oauth.link=Obtén el código de vereficación de chpp.hattrick.org
+oauth.link=Obtén el código de verificación de chpp.hattrick.org
 oauth.success=FoxTrick has sido autorizado correctamente\! Por favor recarga la página para ver información detallada provista por Foxtrick
 
 api.failure=El acceso a los datos en Hattrick falló. Necesitas autorizar a Foxtrick para que acceda a los datos de tu equipo. Si ya lo has hecho, revisa tu conexión o inténtalo más tarde.
