*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9477 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-ES/foxtrick.properties
+++ b/content/locale/es-ES/foxtrick.properties
@@ -376,6 +376,7 @@ module.MobileEnhancements.desc=Conjunto de mejoras para dispositivos móviles
 module.MatchOrderInterface.desc=Ajustes en la interfase de órdenes de partido.
 module.MatchOrderInterface.PlayedLastMatch.desc=Destaca los jugadores que jugaron en el último partido y muestra la última posición y el tiempo jugado en los detalles
 module.MatchOrderInterface.Specialties.desc=Mostrar especialidades de jugadores
+module.MatchOrderInterface.ShowFaces.desc=Mostrar caras de los jugadores en lugar de la camiseta para alineaciones anteriores y futuras
 module.MatchOrderInterface.StayOnPage.desc=Permanecer en la página de órdenes del partido después de guardarla
 module.MatchOrderInterface.SwapPositions.desc=Añade un enlace para cambiar los jugadores de izq. a dcha.
 module.MatchSimulator.desc=Agregar un simulador de partidos a la interfase de órdenes de partido.
@@ -413,6 +414,7 @@ PlayerStatsExperience.ExperienceText=Ya recogió entre %1 y %2 de 28 puntos de e
 PlayerStatsExperience.NotAllMatchesVisible=El valor real podría ser mayor debido a que no todos los partidos se muestran.
 PlayerStatsExperience.NoSkillUpFound=El valor real podría ser mayor porque no se ha encontrado ninguna experiencia de aumento de habilidades registrada.
 PlayerStatsExperience.ExperienceChange.title=Ganancia de experiencia
+PlayerStatsExperience.Walkover=Este partido fue un walkover. Por lo tanto, los jugadores no obtienen experiencia.
 
 #Series statistics
 rating.average=Rendimiento promedio
@@ -582,6 +584,7 @@ Filters.noFilter=Ningún filtro
 Filters.none=Ninguno
 Filters.Attributes=Filtros de atributo
 Filters.days=Días
+Filters.tsi=TSI
 Filters.stamina=Resistencia
 Filters.Form=Forma
 Filters.XP=Experiencia
@@ -622,7 +625,9 @@ matchOrder.tournamentMatch=Torneo
 matchOrder.homeAway=Autodetectar, agregar equipo de local o equipo de visita?
 matchOrder.default=Defecto
 matchOrder.home=Local
+matchOrder.home.abbr=L
 matchOrder.away=Visita
+matchOrder.away.abbr=V
 
 #Skills
 Playmaking=Jugadas
@@ -663,17 +668,25 @@ categories.E2=E2
 
 #match positions
 match.pos.kp=Portero
+match.pos.kp.abbr=PO
 match.pos.lb=Defensor lateral izquierdo
 match.pos.lb.abbr=DLI
 match.pos.lcd=Defensor central izquierdo
+match.pos.lcd.abbr=DCI
 match.pos.mcd=Defensa Central al medio
+match.pos.mcd.abbr=DC
 match.pos.rcd=Defensa Central Derecho
+match.pos.rcd.abbr=DCD
+match.pos.rb=Defensa lateral derecho
+match.pos.rb.abbr=LD
 match.pos.lw=Extremo izquierdo
+match.pos.lw.abbr=LI
 match.pos.lcm=Mediocampista Central Izquierdo
 match.pos.mcm=Mediocampista Central al medio
 match.pos.rcm=Mediocampista Central Derecho
 match.pos.rw=Extremo derecho
 match.pos.lf=Delantero izquierdo
+match.pos.lf.abbr=LI
 match.pos.mf=Delantero centro
 match.pos.rf=Delantero derecho
 
@@ -697,6 +710,7 @@ PlayerNumber.abbr=\#
 TSI=TSI
 TSI.abbr=TSI
 CanBePromotedIn=Puede ser promocionado en
+CanBePromotedIn.abbr=Prom
 Personality=Personalidad
 Agreeability=Carácter
 Agreeability.abbr=Ca
@@ -712,7 +726,7 @@ Stamina=Resistencia
 Stamina.abbr=Con
 Form=forma
 Form.abbr=Fo
-Loyalty=Fidelidaz
+Loyalty=Fidelidad
 MotherClubBonus=Bono de Club Madre
 Status=Estado
 Status.abbr=Estado
@@ -1003,7 +1017,7 @@ LocalTime.local.title=Hora local. Click para cambiar a hora Hattrick.
 pageAction.rightMenu=Mostrar la barra de la derecha
 pageAction.mainContent=Mostrar contenido principal
 pageAction.leftMenu=Mostrar la barra de la izquierda
-pageAction.all=Mostrar todo
+pageAction.all=Mostrar todos
 
 team.status.booked=Amistoso pactado
 
