--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -168,6 +168,7 @@ module.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Geef eigen spelers een 
 module.MatchReportFormat.desc=Regel voor regel presentatie van het verslag, overeenkomend met de wedstrijdgebeurtenissen. Je kunt de kleuren hieronder aanpassen.
 module.MatchReportFormat.ShowEventIcons.desc=Voeg gebeurtenis specifieke iconen toe
 module.MatchReportFormat.SeparateOwnTeamColors.desc=Geef eigen team een aparte kleur
+module.LiveMatchReportFormat.desc=Presentatie van de HT-live en HT-relive verslagen per regel, in overeenkomst met de wedstrijd gebeurtenissen en met gebeurtenis specifieke iconen.
 module.ForumRedirManagerToTeam.desc=Stuur links van het forum door naar de teampagina in plaats van de managerpagina
 module.ManagerButtons.desc=Toon of verander manager knoppen op manager en team paginas
 module.ManagerButtons.GuestBook.desc=Toon 'Schrijf in het gastenboek' knop op de managerpagina
@@ -380,6 +381,7 @@ module.MatchOrderInterface.PlayedLastMatch.desc=Markeer spelers die in de laatst
 module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Ook op het veld markeren
 module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Uitschakelen voor toernooi wedstrijden
 module.MatchOrderInterface.Specialties.desc=Laat spelers' specialiteiten zien
+module.MatchOrderInterface.ShowFaces.desc=Laat spelers gezichten zien ipv shirts voor alle opstellingen
 module.MatchOrderInterface.StayOnPage.desc=Blijf op de opstellings-pagina na opslaan
 module.MatchOrderInterface.SwapPositions.desc=Voeg een link toe om spelers over de as van het veld te wisselen.
 module.MatchSimulator.desc=Voeg een wedstrijden simulator toe aan de opstellings-pagina.
