*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.9.3@9484 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -355,7 +355,7 @@ module.SeriesFlags.Visitors.desc=Megjelenítés „A legutóbbi látogatók” m
 module.SeriesFlags.CountryOnly.desc=A zászló megjelenítése az országnév nélkül
 module.HTMSPoints.desc=A játékos HTMS-képességtáblázat segítségével számított edzéspontjainak megjelenítése
 module.HTMSPoints.AddToPlayer.desc=Megjelenítés a játékos adatlapján
-module.HTMSPoints.AddToSearchResult.desc=Megjelenítés az Átigazolások oldalnak A keresés eredménye részén
+module.HTMSPoints.AddToSearchResult.desc=Megjelenítés az Átigazolások oldal Keresés eredménye lapján
 module.HTMSPoints.AddToPlayerList.desc=Megjelenítés a Játékosok oldalon
 module.TableOfStatisticalTruth.desc=Statisztikai előrejelzés a bajnokság végeredményéhez (csak a szezonok végén).
 module.FriendlyInterface.desc=Finombeállításokat végez a kezelhetőbb felület kialakítása érdekében
@@ -391,12 +391,12 @@ module.MatchSimulator.HTMSPrediction.desc=HTMS előrejelzés hozzáadása
 module.HeaderToggle.desc=A h2-fejléceken kattintva megjeleníti vagy elrejti a befoglalt területet. Megjegyzi a legutolsó egyéni beállításokat az oldaltípus és fejléc címe alapján
 module.Filter.desc=Szűrők hozzáadása a Top játékosok oldalhoz
 module.RatingsDisplay.desc=Az átlagértékeléseket különböző stílusban jeleníti meg
-module.RatingsDisplay.DenominationsRange.desc=A 0-20 értékek tartományában
+module.RatingsDisplay.DenominationsRange.desc=A 0-20 értéktartományban
 module.RatingsDisplay.HatStats.desc=HatStats értékelés szerint
 module.RatingsDisplay.HTSums.desc=Hattrick értékelések összegeként
 module.SafeForWork.desc=A Hattrick oldal ikonját és címét egy kevésbé gyanús kinézetre cseréli. Bizonyosodj meg róla, hogy egyéb kockázatos modul is kikapcsoltál, mint pl. a "Figyelmeztetések" modulokat.
 module.PlayerStatsExperience.desc=Tapasztalat töredékszintjének megjelenítése a Legutóbbi teljesítmények oldalon
-module.YouthTwins.desc=A hattrick youthclub-bal együttműködve megjeleníti az ifijátékosaid lehetséges ikerpárjait. Nincs szükséged hattrick youthclub hozzáféréshez ehhez a modulhoz. Mivel az ikrek azonosításához elengedhetetlen a játékosok arcképének ismerete, ezért az a funkció csak támogatók részére hasznos.
+module.YouthTwins.desc=A hattrick youthclub-bal együttműködve megjeleníti az ifijátékosaid lehetséges ikerpárjait. Nincs szükséged hattrick youthclub hozzáféréshez ehhez a modulhoz. Mivel az ikrek azonosításához elengedhetetlen a játékosok arcképének ismerete, ezért a funkció csak támogatók részére hasznos.
 # -----------------------------------------------------------------------------
 
 
@@ -1056,7 +1056,7 @@ button.save=Mentés
 button.go=Ugrás\!
 button.add=Hozzáadás
 button.remove=Eltávolítás
-button.top=Fent
+button.top=Oldal tetejére
 button.authorize=Engedélyezés
 button.export=Exportálás
 button.import=Importálás
@@ -1134,7 +1134,7 @@ module.link=Itt másolhatod és illesztheted be közvetlenül a fórumhivatkozá
 tab.main=Főmenü
 tab.on_page=Aktuális oldal moduljai
 tab.universal=Univerzális modulok
-tab.informationAggregation=Információk összegzése
+tab.informationAggregation=Adatok/Információk
 tab.shortcutsAndTweaks=Parancsikonok és kiegészítők
 tab.presentation=Megjelenítés és finombeállítások
 tab.matches=Mérkőzések
@@ -1146,7 +1146,7 @@ tab.changes=Módosítások
 tab.help=Súgó
 
 prefs.setup=Beállítás
-prefs.setup.desc=Ezeket a beállításokat észlelte nálad a Foxtrick. Ha hibásak, [kérlek jelentsd].
+prefs.setup.desc=Ezeket a beállításokat észlelte nálad a Foxtrick. Ha hibásak, {kérlek jelentsd}.
 prefs.setup.locale=Nyelv
 prefs.setup.dateFormat=Dátumformátum
 prefs.setup.country=Ország
@@ -1173,7 +1173,7 @@ prefs.loadSave.import=Az alapbeállítások importálása (felülírja az aktuá
 prefs.loadSave.import.notice=Illeszd be a mentett beállításaidat a szövegmezőbe, majd a beállítások importálásához kattints az „Importálás” gombra.
 
 prefs.additional.title=További beállítási lehetőségek
-prefs.additional.xmlLoad=Hattrickról származó extra információkhoz XML fájlok betöltése
+prefs.additional.xmlLoad=XML fájlok betöltése Hattrickról származó extra információk beszerzéséhez
 prefs.additional.smallCopyIcons=A másolás ikonok megjelenítése a fejlécben az oldalsáv helyett
 prefs.additional.anstoss2Icons=Anstoss2 ikongyűtjemény használata specialitásokhoz
 prefs.additional.featureHighlight=A FoxTrick funkciók kiemelése
