--- a/content/locale/ja/foxtrick.properties
+++ b/content/locale/ja/foxtrick.properties
@@ -492,8 +492,8 @@ seasonstats.goalplus=得
 seasonstats.goalminus=失
 seasonstats.goaldiff=±
 seasonstats.total=計
-seasonstats.home=Ho
-seasonstats.away=Aw
+seasonstats.home=H
+seasonstats.away=A
 seasonstats.league=リーグ
 seasonstats.friendly=親善試合
 seasonstats.cup=カップ
