*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.9.3@9496 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -260,7 +260,7 @@ module.ContextMenuCopy.Id.desc=Azonosítók másolását lehetővé tévő menü
 module.ContextMenuCopy.Link.desc=Hivatkozások helyének HT-ML-ben történő másolását lehetővé tévő menüpont
 module.ContextMenuCopy.HtMl.desc=Kijelölt tartalmak HT-ML-ben történő másolását lehetővé tévő menüpont
 module.ContextMenuCopy.Table.desc=Táblázatok HT-ML-ben történő másolását lehetővé tévő menüpont
-module.NewMail.desc=Színezéssel jelzi, ha új HT-mélt kapsz
+module.NewMail.desc=Színezéssel jelzi, ha új HT-levelet kapsz
 module.NewMail.NotifyMail.desc=Figyelmeztetés megjelenítése új levél érkezésekor
 module.NewMail.NotifyMailSound.desc=Hang lejátszása új levél érkezésekor
 module.NewMail.NotifyForum.desc=Értesítés megjelenítése új fórum válasz esetén
