Serbian release notes update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9497 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -13,6 +13,7 @@
 </note>
 
 <note version="0.9.3">
+<item>● НОВО: <module>YouthTwins</module>: Приказује број могућих близанаца на страници са играчима омладинског тима (само за супортере у сарадњи са 'hattrick youthclub')</item>
 <item>● <module>MatchOrderInterface</module>: Опција за искључивање означавања и приказивање информација за мечеве на турнирима</item>
 <item>● <module>MatchOrderInterface</module>: Исправљена грешка због које се у Фајерфоксу нису коректно приказивали играчи који су играли на претходном мечу</item>
 <item>● <module>PlayerStatsExperience</module>: Исправљена грешка за играче који су добили црвени картон код којих су ови мечеви детектовани као да су завршени службеним резултатом</item>
