*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.9.3@9501 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -167,6 +167,7 @@ module.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Separa il colore dei pr
 module.MatchReportFormat.desc=Modifica il resoconto delle partite evidenziando i singoli eventi. Si possono definire colori personalizzati.
 module.MatchReportFormat.ShowEventIcons.desc=Aggiungere icone degli eventi specifici.
 module.MatchReportFormat.SeparateOwnTeamColors.desc=Evidenzia gli eventi della propria squadra colorandoli
+module.LiveMatchReportFormat.desc=Presentazione della cronaca di HT Live e di HT Re-Live riga per riga, mostrando gli eventi con le icone specifiche.
 module.ForumRedirManagerToTeam.desc=Salta direttamente alla pagina della squadra anziché a quella dell'utente quando si clicca sul nome di un utente nel forum
 module.ManagerButtons.desc=Aggiungi o cambia i pulsanti del manager sulla pagina manager e sulla pagina della squadra
 module.ManagerButtons.GuestBook.desc=Aggiungi il link Scrivi nel Libro degli Ospiti nella pagina del manager e in quella della squadra
