Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9509 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -423,17 +423,18 @@ PlayerStatsExperience.ExperienceChange.title.abbr=Иск(+)
 PlayerStatsExperience.Walkover=Ова утакмица је завршена службеним резултатом. Због тога играчи нису добили поене за искуство.
 
 
-PlayerStatsExperience.MatchesSinceSkilup=Мечева од последњег скока нивоа кондиције
+PlayerStatsExperience.MatchesSinceSkilup=Мечеви од последњег скока нивоа кондиције
 PlayerStatsExperience.matches=Мечева
 PlayerStatsExperience.minutes=Минута
 PlayerStatsExperience.minXPpts=Мин. поена
 PlayerStatsExperience.maxXPpts=Макс. поена
-PlayerStatsExperience.sum=Сума
-PlayerStatsExperience.Experience=Искуство
+PlayerStatsExperience.sum=Укупно
+PlayerStatsExperience.Experience=Тренутни ниво искуства
+PlayerStatsExperience.InternationalPercentage=Међ. пријатељске у %:
 
-PlayerStatsExperience.matchFriendly=Пријатељске
-PlayerStatsExperience.matchInternationalFriendly=Међународне
-PlayerStatsExperience.matchNationalFriendly=Националне
+PlayerStatsExperience.matchFriendly=Пријатељски мечеви
+PlayerStatsExperience.matchInternationalFriendly=Међународни
+PlayerStatsExperience.matchNationalFriendly=Национални
 PlayerStatsExperience.matchCup=Куп
 PlayerStatsExperience.matchQualification=Бараж
 PlayerStatsExperience.matchLeague=Лига
