*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.9.3@9511 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -449,7 +449,7 @@ HistoryStats.cupwinner.short=CV
 
 # YouthPromotes
 #following string uses pluralForms
-YouthPromotes.future=Spilleren kan blive forfremmet %1 dag senere, d. %2.;Spilleren kan blive forfremmet %1 dage senere d. %2.
+YouthPromotes.future=Spilleren kan blive forfremmet om %1 dag, senest d. %2.;Spilleren kan blive forfremmet om %1 dage, senest d. %2.
 YouthPromotes.today=Spiller kan rykkes op i dag\!
 
 #teamstats+filters
